Fixed footer spacing on theme1 layout

--- a/public/css/theme1.css
+++ b/public/css/theme1.css
@@ -4,8 +4,6 @@
 
 .container {
 	max-width: 1000px;
-	min-height: 500px;
-	margin-bottom: 30px;
 }
 
 /*******************************************************************************
